<resources>
    <string name="app_name">App Connect</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="email_or_username">Email or Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_log_in_with">Or log in with</string>
    <string name="dont_have_account_sign_up">Don\'t have an account? &lt;font color=\'#50BDB8\'&gt;&lt;b&gt;Sign Up&lt;/b&gt;&lt;/font&gt;</string>
    <string name="cd_app_logo">App Logo</string>
    <string name="cd_google">Log in with Google</string>
    <string name="cd_facebook">Log in with Facebook</string>
    <string name="cd_github">Log in with GitHub</string>

    <!-- Register Screen Strings -->
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="or_register_with">Or register with</string>
    <string name="already_have_account_log_in">Already have an account? &lt;font color=\'#50BDB8\'&gt;&lt;b&gt;Log In&lt;/b&gt;&lt;/font&gt;</string>
    <string name="cd_register_google">Register with Google</string>
    <string name="cd_register_facebook">Register with Facebook</string>
    <string name="cd_register_github">Register with GitHub</string>
</resources>
